post: fix video element might be too big

--- a/src/Feeds/inner-doc.css
+++ b/src/Feeds/inner-doc.css
@@ -6,6 +6,7 @@ img {
 video {
     max-width: 100%;
     object-fit: contain;
+    max-height: 320px;
 }
 
 p,
